# tack

./: .gitignore  .parcelrc  Justfile  LICENSE  README.md  package.json
client/: package.json
client/public/: manifest.json  service-worker.ts
client/scripts/fontawesome/: fontawesome.css
client/src/: App.css  GlobalProject.tsx  hooks.ts  migrations.ts  model.ts  util.ts  websocket.ts
client/src/routes/: Detail.tsx  Search.tsx  TaskList.tsx
public/: index.html  manifest.json
public/assets/fontawesome/: fontawesome.css  solid.css
scripts/: start.js  subset-font.sh
server/: Cargo.toml  index.ts  package.json
server/src/: main.rs
src/: App.css  App.tsx  GlobalProject.tsx  TaskList.tsx  hooks.ts  index.tsx  migrations.ts  model.ts  util.ts
src/routes/: Detail.tsx  Schedule.tsx  Search.tsx  TaskList.tsx
